// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pill /> should render an attribute label 1`] = `
<span
  className="pill alert small"
>
  Test
</span>
`;

exports[`<Pill /> should render an attribute label with default values 1`] = `
<span
  className="pill neutral small"
>
  Test
</span>
`;
